src/test/resources/tests/typeError/referenceForMissingFunction.qg

init {
    ref = ::blahblah
}

run true

input(a,b) true